# weekly_summeries

./: .gitignore  Makefile  cli.py  debug_confidence.py  debug_settings.py  debug_should_use.py  debug_should_use_detailed.py  debug_tool_selection.py  improved_lumen_system_prompt.md  pyproject.toml  requirements-basic.txt  requirements-minimal.txt  requirements.txt  start.sh  test_agent_query.py
config/: agent_prompts.yaml  settings.py  tool_configs.yaml
docker/: Dockerfile.basic  Dockerfile.main  Dockerfile.poetry
docker/compose/: docker-compose.poetry.yml  docker-compose.simple.yml  docker-compose.yml
scripts/: agent.sh
scripts/_backup/: cli-poetry.sh  run-poetry.sh  run-smart.sh  run.sh
scripts/deployment/: deploy.sh
scripts/dev/: server.sh
scripts/docker/: build.sh  compose.sh  run.sh
scripts/run/: run-simple.sh
scripts/setup/: configure-apis.sh  setup.sh
src/agent/: context_manager.py  intelligent_agent.py  prompt_templates.py  tool_selector.py
src/api/: main.py  main_simple.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  config.py  exceptions.py  json_utils.py  utils.py
src/tools/: base_tool.py  registry.py
src/tools/database/: __init__.py  connection_manager.py  mcp_database_tool.py  snowflake_tool.py  utilities.py
src/tools/google_drive/: __init__.py  drive_search_tool.py
src/tools/notion/: __init__.py  notion_tool.py
src/tools/processing/: __init__.py  data_analysis_tool.py  summary_tool.py
src/tools/slack/: __init__.py  slack_tool.py
tests/: __init__.py  conftest.py  test_agent.py  test_openai.py  test_snowflake.py  test_snowflake_tool.py
